--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lit-element-starter-js",
-  "version": "0.0.0",
+  "name": "wh-input-number",
+  "version": "0.1.0",
   "description": "A simple web component",
   "main": "wh-input-number.js",
   "module": "wh-input-number.js",
@@ -32,7 +32,8 @@
   "author": "The Polymer Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "lit-element": "^2.3.1"
+    "lit-element": "^2.3.1",
+    "material-icons": "^0.5.3"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.10.0",
